# vector-store

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  openapi.json
.cargo/: config.toml
.github/instructions/: rust.instructions.md
.github/workflows/: build-cloud-images.yaml  rust.yml  validator.yml
api/: openapi.json
crates/benchmark/src/: main.rs
crates/httpclient/src/: lib.rs
crates/validator-engine/: Cargo.toml
crates/validator-engine/src/: dns.rs  firewall.rs  lib.rs  scylla_cluster.rs  scylla_proxy_cluster.rs  vector_store_cluster.rs
crates/validator-tests/: Cargo.toml
crates/validator-tests/src/: common.rs  dns.rs  firewall.rs  lib.rs  scylla_cluster.rs  scylla_proxy_cluster.rs  vector_store_cluster.rs
crates/validator-vector-store/: Cargo.toml
crates/validator-vector-store/src/: ann.rs  auth.rs  crud.rs  db_timeout.rs  full_scan.rs  high_availability.rs  index_create.rs  index_status.rs  lib.rs  memory_limit.rs  quantization_and_rescoring.rs  reconnect.rs  serde.rs  similarity_functions.rs
crates/vector-store/: Cargo.toml
crates/vector-store/src/: config_manager.rs  db.rs  db_index.rs  distance.rs  engine.rs  httproutes.rs  httpserver.rs  internals.rs  lib.rs  main.rs  monitor_indexes.rs  monitor_items.rs  node_state.rs  similarity.rs
crates/vector-store/src/index/: actor.rs  factory.rs  opensearch.rs  usearch.rs
crates/vector-store/tests/integration/: db_basic.rs  https.rs  info.rs  main.rs  memory_limit.rs  opensearch.rs  quantization.rs  status.rs  usearch.rs
packer/: vector-store-template.json
packer/files/: node_exporter_install  vector_store_install_image
scripts/: run-validator-with-scylla-docker  run-with-release-toolchain
scripts/sizing-algorithm/: example_sizing.py  test_vss_sizing.py  vss_sizing.py
scripts/sizing-algorithm/webapp/: README.md  app.py  requirements.txt
scripts/sizing-algorithm/webapp/static/: app.js  style.css
scripts/sizing-algorithm/webapp/templates/: index.html
