# Copyright 2025-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

[workspace]
members = ["crates/*"]
default-members = ["crates/vector-store"]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "LicenseRef-ScyllaDB-Source-Available-1.0"

[workspace.dependencies]
anyhow = "1.0.97"
arrow-array = "56.0.0"
async-backtrace = "0.2.7"
async-trait = "0.1.88"
axum = { version = "0.8.1", features = ["macros"] }
bimap = "0.6.3"
clap = { version = "4.5.40", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15.7"
futures = "0.3.31"
hickory-server = "0.25.2"
httpclient = { path = "crates/httpclient" }
humantime = "2.2.0"
itertools = "0.14.0"
macros = { path = "crates/macros" }
mockall = "0.13.1"
ntest = "0.9.3"
rustls = "0.23"
rustls-pki-types = "1.13.1"
opensearch = { version = "2.3.0", default-features = false, features = ["rustls-tls"] }
parquet = { version = "56.0.0", features = ["async"] }
prometheus = "0.14"
quote = "1.0"
rand = "0.9.2"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
scylla = { version = "1.2.0", features = ["time-03", "rustls-023"] }
scylla-cdc = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0", features = ["full"] }
sysinfo = "0.37.2"
tap = "1.0.1"
tempfile = "3.20.0"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
toml = "0.9.8"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-test = "0.2.5"
usearch = "2.21.3"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "vendored"] }
uuid = "1.16.0"
vector-search-validator-engine = { path = "crates/validator-engine" }
vector-search-validator-scylla = { git = "https://github.com/scylladb/scylladb", rev = "d6c14de" }
vector-search-validator-tests = { path = "crates/validator-tests" }
vector-search-validator-vector-store = { path = "crates/validator-vector-store" }
vector-store = { path = "crates/vector-store" }
secrecy = "0.10.3"

[patch.'https://github.com/scylladb/vector-store']
vector-search-validator-tests = { path = "crates/validator-tests" }
