# Copyright 2025-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

[package]
name = "vector-search-validator-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-backtrace.workspace = true
futures.workspace = true
httpclient.workspace = true
scylla.workspace = true
scylla-proxy.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
vector-store.workspace = true
