# Copyright 2025-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

[package]
name = "vector-search-validator-vector-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-backtrace.workspace = true
httpclient.workspace = true
scylla.workspace = true
scylla-proxy.workspace = true
tap.workspace = true
tokio.workspace = true
tracing.workspace = true
vector-search-validator-tests.workspace = true
vector-store.workspace = true
