# Copyright 2025-present ScyllaDB
# SPDX-License-Identifier: LicenseRef-ScyllaDB-Source-Available-1.0

# TODO: review and limit dependencies and features

[package]
name = "vector-store"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "vector-store"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate-openapi.rs"
required-features = ["dev-tools"]

[features]
default = []
dev-tools = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
bimap.workspace = true
clap.workspace = true
dashmap = "6.1.0"
derive_more.workspace = true
dotenvy.workspace = true
futures.workspace = true
humantime.workspace = true
itertools.workspace = true
macros.workspace = true
ntest.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
opensearch.workspace = true
prometheus.workspace = true
rand.workspace = true
regex.workspace = true
scylla.workspace = true
scylla-cdc.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
usearch.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
rayon.workspace = true

[dev-dependencies]
mockall.workspace = true
reqwest.workspace = true
httpclient.workspace = true
tempfile.workspace = true
temp-env = "0.3.6"
tracing-test.workspace = true
rcgen = "0.14.5"
